[project]
name = "memu-plugin-scripts"
version = "1.0.0"
description = "Python scripts for memU OpenClaw plugin"
requires-python = ">=3.13"
dependencies = [
    "memu-py>=1.4.0",
    "watchdog>=4.0.0",
    "sqlmodel>=0.0.14",
    "openai>=1.0.0",
    "httpx>=0.28.0",
    "pydantic>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
]

[tool.hatch.build.targets.wheel]
packages = ["scripts"]